--- a/src/app/Components/summary2/summary2.component.html
+++ b/src/app/Components/summary2/summary2.component.html
@@ -70,8 +70,6 @@
 
             </div>
 
-            <div class="clearfix visible-sm-block"></div>
-
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="info-box">
                 <span class="info-box-icon bg-green">
@@ -82,7 +80,7 @@
                   <span class="info-box-text">Total Pending Deposits</span>
                   <span class="info-box-number">
                     {{currency.sum_debits_pending / 100 | currency}}
-                  </span>0
+                  </span>
                 </div>
 
               </div>
@@ -91,7 +89,61 @@
 
           </div>
 
-          
+          <div class="row">
+
+            <div class="small-box bg-blue col-md-3 col-sm-6 col-xs-12">
+              <div class="inner">
+                <h3>Total Income</h3>
+                <p>{{currency.sum_credits_pending / 100 | currency}}</p>
+              </div>
+              <div class="icon">
+                <i class="fa fa-money"></i>
+              </div>
+              <a href="#" class="small-box-footer">
+                More info <i class="fa fa-arrow-circle-right"></i>
+              </a>
+            </div>
+
+            <div class="small-box bg-yellow col-md-3 col-sm-6 col-xs-12">
+              <div class="inner">
+                <h3>Total Balance</h3>
+                <p>{{currency.balance_total / 100 | currency}}</p>
+              </div>
+              <div class="icon">
+                <i class="fa fa-usd"></i>
+              </div>
+              <a href="#" class="small-box-footer">
+                More info <i class="fa fa-arrow-circle-right"></i>
+              </a>
+            </div>
+
+            <div class="small-box bg-aqua col-md-3 col-sm-6 col-xs-12">
+              <div class="inner">
+                <h3>Total Available Balance</h3>
+                <p>{{currency.available_balance_total / 100 | currency}}</p>
+              </div>
+              <div class="icon">
+                <i class="fa fa-usd"></i>
+              </div>
+              <a href="#" class="small-box-footer">
+                More info <i class="fa fa-arrow-circle-right"></i>
+              </a>
+            </div>
+
+            <div class="small-box bg-green col-md-3 col-sm-6 col-xs-12">
+              <div class="inner">
+                <h3>Total Pending Deposits</h3>
+                <p>{{currency.sum_debits_pending / 100 | currency}}</p>
+              </div>
+              <div class="icon">
+                <i class="fa fa-money"></i>
+              </div>
+              <a href="#" class="small-box-footer">
+                More info <i class="fa fa-arrow-circle-right"></i>
+              </a>
+            </div>
+
+          </div>
 
     </section>
     <!-- /.content -->
