--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -34,6 +34,7 @@
         <!-- Optionally, you can add icons to the links -->
 
         <li><a routerLink="/users"><i class="fa fa-link"></i> <span>Users</span></a></li>
+        <li><a routerLink="/accounts"><i class="fa fa-link"></i> <span>Accounts</span></a></li>
         <li><a routerLink="/transactions"><i class="fa fa-link"></i> <span>Transactions</span></a></li>
  
 
