--- a/src/app/Components/summary2/summary2.component.html
+++ b/src/app/Components/summary2/summary2.component.html
@@ -36,11 +36,11 @@
                   More info <i class="fa fa-arrow-circle-right"></i>
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="">Deposito 1</a>    <br />                                              
-                  <a class="dropdown-item" href="">Deposito 2</a>    <br />
-                  <a class="dropdown-item" href="">Deposito 3</a>    <br />
+                  <a class="dropdown-item" >Deposito 1</a>    <br />                                              
+                  <a class="dropdown-item" >Deposito 2</a>    <br />
+                  <a class="dropdown-item" >Deposito 3</a>    <br />
                   <div class="dropdown-divider"></div>                                              
-                  <a class="dropdown-item" href="">Sign Out</a>
+                  <a class="dropdown-item" >Sign Out</a>
                 </div>
               </div>
             </div>
