--- a/src/app/Components/accounts/accounts.component.html
+++ b/src/app/Components/accounts/accounts.component.html
@@ -1,4 +1,3 @@
-<p>accounts works!</p>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper content-height">
     <!-- Content Header (Page header) -->
@@ -25,7 +24,7 @@
            <!--<div class ="loading" *ngif="loading">
       <img src="../../../assets/images/loading.gif">-->
           <!--<table class="table table-hover table-fixed">-->
-            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" >
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" class="display" >
             <!--Table head-->
             <ng-container *ngIf="Cuentas?.length != 0">
             <thead>
