--- a/src/app/Components/summary2/summary2.component.html
+++ b/src/app/Components/summary2/summary2.component.html
@@ -89,27 +89,17 @@
           <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="info-box">
               <span class="info-box-icon bg-grey">
-                <i class="fa fa-money">
+                <i class="fa fa-users">
                 </i>
               </span>
+              
               <div class="info-box-content">
-                <span class="info-box-text">Total Income</span>
+                <span class="info-box-text">Total Users</span>
                 <span class="info-box-number">
-                  {{currency.sum_credits_pending / 100 | currency}}
+                    {{Usuarios.count}}
                 </span>
-                <div class="btn-group" >                                            
-                  <button type="button" class="btn btn-primary dropdown-toggle fa fa-info" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    More Info
-                  </button>                                
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="">Deposito 1</a>    <br />                                              
-                    <a class="dropdown-item" href="">Deposito 2</a>    <br />
-                    <a class="dropdown-item" href="">Deposito 3</a>    <br />
-                    <div class="dropdown-divider"></div>                                              
-                    <a class="dropdown-item" href="">Sign Out</a>
-                  </div>
-                </div>
               </div>
+
             </div>
           </div>
         <div class="col-md-3 col-sm-6 col-xs-12">
