--- a/src/app/Components/summary2/summary2.component.html
+++ b/src/app/Components/summary2/summary2.component.html
@@ -92,7 +92,7 @@
                 <i class="fa fa-users">
                 </i>
               </span>
-              
+
               <div class="info-box-content">
                 <span class="info-box-text">Total Users</span>
                 <span class="info-box-number">
@@ -105,26 +105,15 @@
         <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="info-box">
             <span class="info-box-icon bg-aqua">
-              <i class="fa fa-usd">
+              <i class="fa fa-money">
               </i>
             </span>
             <div class="info-box-content">
-              <span class="info-box-text">Total Balance</span>
+              <span class="info-box-text">Total Transactions</span>
               <span class="info-box-number">
-                {{currency.balance_total / 100 | currency}}
+                  {{Transa.count}}
               </span>
-                    <div class="btn-group" >                                            
-                      <button type="button" class="btn btn-primary dropdown-toggle fa fa-info" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        More Info
-                      </button>                                
-                       <div class="dropdown-menu">
-                          <a class="dropdown-item" href="">Deposito 1</a>    <br />                                              
-                          <a class="dropdown-item" href="">Deposito 2</a>    <br />
-                          <a class="dropdown-item" href="">Deposito 3</a>    <br />
-                         <div class="dropdown-divider"></div>                                              
-                          <a class="dropdown-item" href="">Sign Out</a>
-                       </div>
-                    </div>
+                   
             </div>                      
           </div>                            
         </div>        
